k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: jsluxe-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: jsluxe-app

  template:
    metadata:
      labels:
        app: jsluxe-app

    spec:
      containers:
        - name: jsluxe-container
          image: DOCKER_USERNAME/jsluxe-app:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80
